--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ nav{
     font-weight: 600;
     text-decoration: none;
   }
+  .wrapper .logo .log{
+    width: 200px;
+    height: auto;
+    position: relative;
+    top: -2px;
+    left: -10px;
+  }
   .wrapper .nav-links{
     display: inline-flex;
   }
@@ -68,27 +75,6 @@ nav{
     font-weight: 400;
     border-radius: 0px;
   }
-  .mega-box{
-    position: absolute;
-    left: 0;
-    width: 100%;
-    padding: 0 30px;
-    top: 85px;
-    opacity: 0;
-    visibility: hidden;
-  }
-  .mega-box .content{
-    background-color: #24262b;
-    padding: 25px 20px;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    box-shadow: 0 6px 10px rgba(0,0,0,0.15);
-  }
-  .mega-box .content .row{
-    width: calc(25% - 30px);
-    line-height: 45px;
-  }
   .content .row img{
     width: 100%;
     height: 100%;
@@ -98,23 +84,6 @@ nav{
     color: #f2f2f2;
     font-size: 20px;
     font-weight: 500;
-  }
-  .content .row .mega-links{
-    margin-left: -40px;
-    border-left: 1px solid rgba(255,255,255,0.09);
-  }
-  .row .mega-links li{
-    padding: 0 20px;
-  }
-  .row .mega-links li a{
-    padding: 0px;
-    padding: 0 20px;
-    color: #d9d9d9;
-    font-size: 17px;
-    display: block;
-  }
-  .row .mega-links li a:hover{
-    color: #f2f2f2;
   }
   .wrapper .btn{
     color: #fff;
@@ -212,40 +181,7 @@ nav{
       border-radius: 5px;
       font-size: 18px;
     }
-    .mega-box{
-      position: static;
-      top: 65px;
-      opacity: 1;
-      visibility: visible;
-      padding: 0 20px;
-      max-height: 0px;
-      overflow: hidden;
-      transition: all 0.3s ease;
-    }
-    .mega-box .content{
-      box-shadow: none;
-      flex-direction: column;
-      padding: 20px 20px 0 20px;
-    }
-    .mega-box .content .row{
-      width: 100%;
-      margin-bottom: 15px;
-      border-top: 1px solid rgba(255,255,255,0.08);
-    }
-    .mega-box .content .row:nth-child(1),
-    .mega-box .content .row:nth-child(2){
-      border-top: 0px;
-    }
-    .content .row .mega-links{
-      border-left: 0px;
-      padding-left: 15px;
-    }
-    .row .mega-links li{
-      margin: 0;
-    }
-    .content .row header{
-      font-size: 19px;
-    }
+    
   }
   nav input{
     display: none;
@@ -260,8 +196,9 @@ nav{
         box-sizing: border-box;
     }
     .container{
-        max-width: 1170px;
+        max-width: 1300px;
         margin:auto;
+        position: relative;
     }
     .row{
         display: flex;
@@ -354,20 +291,18 @@ nav{
         width: 100%;
     }
     }
-    .hding{
-        position: relative;
-        width: 100%;
+
+    .hding .slogan{
+      color: white;
+      position: absolute;
+      top: 100px;
+      left: 200px;
     }
-    .text{
-        font-size: 500%;
-        color: white;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        letter-spacing: 10px;
-    }
-    .slogan{
-        position: absolute;
-        left: 20%;
-        top: 20%;
+    .hding .slogan .text{
+      font-size: 100px;
+      font-family: 'Poppins', sans-serif;
+      font-weight: bold;
+      letter-spacing: 10px;
     }
     .book{
         border-style: none;
@@ -399,11 +334,30 @@ nav{
         margin-top: 100px;
     }
     .trainer .hlv{
-        width: 700px;
-        height: auto;
+        width: 750px;
+        height: 900px;
     }
     .trainer .para{
         padding: 100px;
         background-color: #24262b;
         color:white;
     }
+    .trainer .para h1{
+      font-size: 60px;
+    }
+    .trainer .para p{
+      font-size: 15px;
+    }
+    .sell{
+    
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .sell td{
+      text-align: center;
+      padding: 50px;
+      font-size: 20px;
+      display: inline-block;
+      border: #24262b;
+    }
+    
