--- a/shop.css
+++ b/shop.css
@@ -1,70 +1,31 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-}
-p{
-    color: red;
-}
-.container{
-    max-width: 1200px;
-    margin: auto;
-}
-.product_items{
-    display: flex;
-    /* flex-wrap: wrap; */
-    justify-content: space-between;
-    /* justify-content: space-around; */
-    background-color: #ddd;
-    padding: 12px;
-}
-.product_item{
-    width: 19%;
-    background-color: #fff;
-    padding: 12px;
+.shop .product h3{
     text-align: center;
+    font-size: 65px;
+    padding-top: 40px;
 }
-.product_item img{
-    width: 100%;
-    margin-bottom: 20px;
-}
-.product_item_text{
-    display: flex;
-    justify-content: space-between;
-}
-.product_item button{
-    margin-top: 12px;
-    height: 30px;
-    pad: 0 12px;
-    cursor: pointer;
-    border: none;
-}
-.product_item button:hover{
-    background-color: tomato;
-}
-/* ---------cart---------- */
-.cart {
-    width: 50%;
-    margin: auto;
+.shop{ 
+    position: relative;
     text-align: center;
-    padding-top: 30px;
+    padding-left: 150px;
 }
-.cart h2{
-    margin-bottom: 20px;
+.shop .product figcaption{
+    text-align: center;
+    font-size: 15px;
 }
-.cart, table{
-    width: 100%;
+.shop .product .anhBottle{
+    width:150px;
+    height: 350px;
+    padding-bottom: 30px;
+    
 }
-.cart table thead tr th:first-child{
-    text-align: left;
+.shop .product img{
+    width: 300px;
+    padding: 20px;
 }
-.cart table tr td{
-    border-bottom: 1px solid #ddd;
-    padding: 12px;
+.shop .product .table{
+    padding: 100px;
 }
-/* .cart table thead tr th:last-child {
-    text-align: right;
+.shop .product .table td{
+    width: 400px;
+    padding: auto;
 }
-.cart table thead tr td:last-child {
-    text-align: right;
-} */
