--- a/blog.css
+++ b/blog.css
@@ -60,3 +60,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     font-family: "Poppins", sans-serif;
 }
+code, pre, samp {
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    font-size: 1em;
+}
