--- a/blog.css
+++ b/blog.css
@@ -4,10 +4,10 @@
 .spad{
     padding-top: 100px;
 }
-/* @media only screen and (min-width: 1200px) */
-.container{
+/* @media  screen  (min-width: 1200px) */
+/* .container{
 max-width: 1170px;
-}
+} */
 .row{
     display: flex;
     flex-wrap:wrap;
